fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 #root {
-  max-width: 100vw;
+  /*max-width: 100vw;*/
   text-align: center;
 }
 
