--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
-
+*{
+  box-sizing: border-box
+}
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -18,6 +20,7 @@
 }
  html {
   scroll-behavior: smooth;
+   overflow-x: hidden;
  }
 a {
   text-decoration: inherit;
@@ -37,7 +40,7 @@ h1 {
   line-height: 100%;
   color: #02193B;
   font-weight: bold;
-
+  overflow-x: hidden;
 }
 h2 {
   font-size: 1.5em;
